[tool.poetry]
name = "lesson18-hw"
version = "0.1.0"
description = ""
authors = ["Igor Degtyarenko <div50015@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selene = "2.0.0rc4"
pytest = "7.4.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
